--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,13 @@ dependencies:
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
   animations: ^2.0.11
+  http: ^1.2.2
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.6
+  flutter_secure_storage: ^9.2.2
+  encrypt: ^5.0.3
+  flutter_dotenv: ^5.1.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/images/
+    - .env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
